# gcron

./: .gitignore  AUTHORS  README.md  build.sh  meson.build  run.sh
data/: Application.css  com.github.padjis.gcron.appdata.xml.in  com.github.padjis.gcron.desktop.in  com.github.padjis.gcron.gresource.xml  meson.build
data/icons/: gcron.xcf
debian/: changelog  control  copyright
meson/: post_install.py
po/: LINGUAS  POTFILES  ca.po  com.github.padjis.gcron.pot  es.po  fr.po  nl.po  pt.po
po/extra/: LINGUAS  POTFILES  ca.po  es.po  extra.pot  fr.po  nl.po  pt.po
src/: Application.vala  Main.vala  meson.build
src/Widgets/: Grid.vala  HeaderBar.vala  ListBox.vala
src/Widgets/Buttons/: DeleteButton.vala  DisplayButton.vala  EmptyLineButton.vala  FullExplainButton.vala
src/Window/: Window.vala
src/component/: Grid.vala  ListBox.vala  ReadOnlyEntry.vala
src/component/button/: DeleteButton.vala  DisplayButton.vala  EmptyLineButton.vala  FullExplainButton.vala
src/grid/: Grid.vala
src/util/: Cron  Cron.vala  Descriptor.vala
src/widgets/: Grid.vala  HeaderBar.vala  ListBox.vala  ReadOnlyEntry.vala
src/widgets/button/: DeleteButton.vala  DisplayButton.vala  EmptyLineButton.vala  FullExplainButton.vala
src/window/: Window.vala
