sources = files (
    'Main.vala',
    'Application.vala',
    'Widgets/HeaderBar.vala',
    'Window/Window.vala',
    'Widgets/Grid.vala',
    'Widgets/ListBox.vala',
    'Widgets/ReadOnlyEntry.vala',
    'Widgets/Buttons/DisplayButton.vala',
    'Widgets/Buttons/FullExplainButton.vala',
    'Widgets/Buttons/EmptyLineButton.vala',
    'Widgets/Buttons/DeleteButton.vala',
    'Util/Descriptor.vala',
    'Util/Cron.vala'
)
